# fal-experiments

./: README.md  pyproject.toml
fal_handlers/sdxl_t2i/: inference.py
src/fal_handlers/sdxl_t2i/: inference.py  models.py
src/pipelines/: sdxl.py
